--- a/css/style.css
+++ b/css/style.css
@@ -22,13 +22,13 @@ body {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  border: 2px solid black;
+  border: 2px solid rgb(0, 0, 0);
 }
 
 .square-div {
   flex: 1 1 48px;
   height: 49px;
-  border: 2px solid black;
+  border: 2px solid rgb(0, 0, 0);
 }
 
 .btn-container {
@@ -44,9 +44,9 @@ body {
 .btn {
   padding: 12px 24px;
   background: rgb(44, 44, 224);
-  color: white;
+  color: rgb(255, 255, 255);
   cursor: pointer;
-  border: none;
+  border: 5px solid transparent;
   border-radius: 6px;
   box-shadow: 0 5px 0 rgb(0, 0, 0);
   transition: transform 0.1s ease;
@@ -56,11 +56,11 @@ body {
 
 .btn:active {
   transform: translateY(4px);
-  box-shadow: 0 1px 0 #d95353;
+  box-shadow: 0 1px 0 rgb(189, 47, 47);
 }
 
 .btn:hover {
   background-color: white;
-  color: black;
-  border: 5px solid black;
+  color: rgb(0, 0, 0);
+  border-color: rgb(0, 0, 0);
 }
